--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "tuimager"
 version = "0.1.0"
 authors = ["Jedsek <jedsek@qq.com>"]
-description = "A TUI app for showing image/gif in terminal"
+description = "A TUI app for showing image/gif in terminal, written in Rust"
 edition = "2021"
 readme = "README.md"
 
